edit some responsive agian

--- a/index.html
+++ b/index.html
@@ -142,15 +142,15 @@
           </div>
         </div>
         <!-- /////// carausol start //////////////// -->
-        <div class="d-flex justify-content-center">
-          <div class="row my-4 row-cols-auto justify-content-center align-items-center">
-            <div class="col-6  col-lg-auto mt-4">
+        <div class="">
+          <div class="row  my-4 d-flex justify-content-center align-items-center ">
+            <div class=" text-center col-6 col-md-4 mt-4 ">
               <a href="https://devmanishmehta.github.io/LoveClc/" target="_blank"><img src="img/lovecalculator-2.png" alt="Love Calculator" style="width: 75px !important;" ></a>
             </div>
-            <div class=" col-5 col-lg-auto mt-4">
+            <div class=" col-6 text-center col-md-4 mt-4">
               <button class="commingSoon btn py-2  px-md-5" id="looming">Looming..</button>
             </div>
-            <div class=" col col-lg-auto mt-4">
+            <div class=" text-center  col-md-4 mt-4">
               <a href="https://www.buymeacoffee.com/manishmehta" target="_blank" text-center><img src="img/bmc-full-logo.svg" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></a>
             </div>
           </div>
