--- a/termsAndConditions.html
+++ b/termsAndConditions.html
@@ -61,7 +61,7 @@
 
 <p>Welcome to Our Web App!</p>
 
-<p>These terms and conditions outline the rules and regulations for the use of ageClc's Website, located at https://devmanishmehta.github.io/ageClc.</p>
+<p>These terms and conditions outline the rules and regulations for the use of ageClc's Website, located at <a href="https://devmanishmehta.github.io/ageClc" class="text-decoration-none">Here</a>.</p>
 
 <p>By accessing this website we assume you accept these terms and conditions. Do not continue to use ageClc if you do not agree to take all of the terms and conditions stated on this page.</p>
 
