--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -59,7 +59,7 @@
         <div class="container my-5">
             <h1>Privacy Policy for ageClc</h1>
 
-<p>At Age Calculator, accessible from https://devmanishmehta.github.io/ageClc/, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Age Calculator and how we use it.</p>
+<p>At Age Calculator, accessible from <a href="https://devmanishmehta.github.io/ageClc/" class="fs-3 text-decoration-none">Here</a>, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Age Calculator and how we use it.</p>
 
 <p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</p>
 
