edit input button

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
         <div class="inputs-wrapper row row-cols-auto">
                 <div class=" mx-auto ">
                   <label for="date-input" class="form-label text-muted ms-md-5 ms-1">Date Of Birth</label>
-                  <input type="date" id="date-input" class="px-md-5 py-3 form-control"  placeholder="Enter DOB" required>
+                  <input type="date" id="date-input" class=" py-3 px-5 form-control" required>
                 </div> 
-                <div class="mt-4 mx-auto"><button onclick="ageClc()" class="px-4 py-3 clcBtn">Calculate</button></div>
+                <div class="mt-4 mx-auto"><button onclick="ageClc()" class="px-4 py-3 clcBtn mt-1">Calculate</button></div>
         </div>
         <div class="outputs-wrapper d-flex justify-content-between">
                 <div>
